// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MultiTypeFieldSelector /> tests "Fixed value" renders children: Fixed value 1`] = `
<div>
  <form>
    <div
      class="bp3-form-group"
    >
      <label
        class="bp3-label"
        for="test"
      >
        <div
          class="formLabel"
        >
          Test Label
          <div
            class="bp3-popover-wrapper typeSelectorWrapper"
          >
            <div
              class="bp3-popover-target typeSelector"
            >
              <button
                class="bp3-button bp3-minimal StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main btn"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  <span
                    class="bp3-icon StyledProps--main icon fixed"
                    data-icon="fixed-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 9 9"
                      width="12"
                    >
                      <path
                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <span
                    class="btnText"
                  >
                    inputTypes.FIXED
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          data-testid="children"
        >
          <input
            type="text"
          />
        </div>
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`<MultiTypeFieldSelector /> tests "disableTypeSelection" does not render type selector 1`] = `
<div>
  <form>
    <div
      class="bp3-form-group formGroup"
    >
      <label
        class="bp3-label"
        for="test"
      >
        <div
          class="formLabel"
        >
          <span>
            Test Label
             
            <b>
              &lt;+input&gt;
            </b>
          </span>
        </div>
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          data-testid="children"
        >
          <input
            type="text"
          />
        </div>
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`<MultiTypeFieldSelector /> tests Change from "Fixed value" to "Runtime input" updates value: Runtime input 1`] = `
<div>
  <form>
    <div
      class="bp3-form-group formGroup"
    >
      <label
        class="bp3-label"
        for="test"
      >
        <div
          class="formLabel"
        >
          <span>
            Test Label
             
            <b>
              &lt;+input&gt;
            </b>
          </span>
          <div
            class="bp3-popover-wrapper typeSelectorWrapper"
          >
            <div
              class="bp3-popover-target typeSelector"
            >
              <button
                class="bp3-button bp3-minimal StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main btn"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  <span
                    class="bp3-icon StyledProps--main icon runtime"
                    data-icon="runtime-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 10 7.97"
                      width="12"
                    >
                      <path
                        d="M8.14 4L8 3.72a2.53 2.53 0 01-.12-.3l-.16-.35c-.11-.25-.22-.38-.32-.38s-.28.15-.37.44C7 3.1 7 3.07 7 3a.73.73 0 01.24-.46.66.66 0 01.42-.26c.25 0 .5.35.76 1.05l.07.17.07-.12c.47-.73.86-1.1 1.18-1.1a.71.71 0 01.29.07l-.4.42h-.11c-.24 0-.52.28-.86.83l-.09.16.07.2c.29.79.53 1.18.71 1.18s.31-.12.4-.36q.09.06.09.12t-.27.39a.74.74 0 01-.45.23c-.25 0-.51-.36-.77-1.07l-.12-.25-.1.17c-.44.76-.87 1.14-1.28 1.14a.65.65 0 01-.39-.12L6.84 5a.32.32 0 00.23.1c.25 0 .53-.25.83-.74l.17-.28zm-4-.32L1.7.59h2.47S5 .52 5.35 1a3.28 3.28 0 01.42 1.14h.31L5.94 0H0v.31l3.06 3.74L0 7.62V8h6.08l.38-2.36-.31-.07a2.43 2.43 0 01-.52 1c-.42.48-2 .41-2 .41H1.39z"
                        fill="current-color"
                      />
                    </svg>
                  </span>
                  <span
                    class="btnText"
                  >
                    inputTypes.RUNTIME
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      />
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`<MultiTypeFieldSelector /> tests Change from "Runtime input" to "Fixed value" updates value: inputTypes.FIXED 1`] = `
<div>
  <form>
    <div
      class="bp3-form-group"
    >
      <label
        class="bp3-label"
        for="test"
      >
        <div
          class="formLabel"
        >
          Test Label
          <div
            class="bp3-popover-wrapper typeSelectorWrapper"
          >
            <div
              class="bp3-popover-target typeSelector"
            >
              <button
                class="bp3-button bp3-minimal StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main btn"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  <span
                    class="bp3-icon StyledProps--main icon fixed"
                    data-icon="fixed-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 9 9"
                      width="12"
                    >
                      <path
                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <span
                    class="btnText"
                  >
                    inputTypes.FIXED
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          data-testid="children"
        >
          <input
            type="text"
          />
        </div>
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`<MultiTypeFieldSelector /> tests Detects "Runtime input" correctly: inputTypes.RUNTIME 1`] = `
<div>
  <form>
    <div
      class="bp3-form-group formGroup"
    >
      <label
        class="bp3-label"
        for="test"
      >
        <div
          class="formLabel"
        >
          <span>
            Test Label
             
            <b>
              &lt;+input&gt;
            </b>
          </span>
          <div
            class="bp3-popover-wrapper typeSelectorWrapper"
          >
            <div
              class="bp3-popover-target typeSelector"
            >
              <button
                class="bp3-button bp3-minimal StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main btn"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  <span
                    class="bp3-icon StyledProps--main icon runtime"
                    data-icon="runtime-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 10 7.97"
                      width="12"
                    >
                      <path
                        d="M8.14 4L8 3.72a2.53 2.53 0 01-.12-.3l-.16-.35c-.11-.25-.22-.38-.32-.38s-.28.15-.37.44C7 3.1 7 3.07 7 3a.73.73 0 01.24-.46.66.66 0 01.42-.26c.25 0 .5.35.76 1.05l.07.17.07-.12c.47-.73.86-1.1 1.18-1.1a.71.71 0 01.29.07l-.4.42h-.11c-.24 0-.52.28-.86.83l-.09.16.07.2c.29.79.53 1.18.71 1.18s.31-.12.4-.36q.09.06.09.12t-.27.39a.74.74 0 01-.45.23c-.25 0-.51-.36-.77-1.07l-.12-.25-.1.17c-.44.76-.87 1.14-1.28 1.14a.65.65 0 01-.39-.12L6.84 5a.32.32 0 00.23.1c.25 0 .53-.25.83-.74l.17-.28zm-4-.32L1.7.59h2.47S5 .52 5.35 1a3.28 3.28 0 01.42 1.14h.31L5.94 0H0v.31l3.06 3.74L0 7.62V8h6.08l.38-2.36-.31-.07a2.43 2.43 0 01-.52 1c-.42.48-2 .41-2 .41H1.39z"
                        fill="current-color"
                      />
                    </svg>
                  </span>
                  <span
                    class="btnText"
                  >
                    inputTypes.RUNTIME
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      />
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;
